--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   flutter_bloc: ^8.1.3
   go_router: ^13.1.0
   modal_progress_hud_nsn: ^0.5.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 
