--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.17.4
   firebase_core: ^2.25.4
@@ -35,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   go_router: ^13.1.0
+  meta: ^1.10.0
   modal_progress_hud_nsn: ^0.5.1
   shared_preferences: ^2.2.2
 
