--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  font_awesome_flutter: ^10.7.0
   go_router: ^13.1.0
   meta: ^1.10.0
   modal_progress_hud_nsn: ^0.5.1
